--- a/blogpost.html
+++ b/blogpost.html
@@ -35,14 +35,14 @@
       <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
-              <ul>
-                  <li><a href="#"><img src="img/logo-light.svg"></a></li>
-                  <li><a href="#">Insights</a></li>
-                  <li><a href="#">Serviços</a></li>
-                  <li><a href="#">Indústrias</a></li>
-                  <li><a href="#">Sobre</a></li>
-                  <li><a class="btn" href="">Contactos</a></li>
-              </ul>
+            <ul>
+              <li><a href="index.html"><img src="img/logo-light.svg"></a></li>
+              <li><a href="blog.html">Insights</a></li>
+              <li><a href="servicos.html">Serviços</a></li>
+              <li><a href="industrias.html">Indústrias</a></li>
+              <li><a href="sobre.html">Sobre</a></li>
+              <li><a class="btn" href="contactos.html">Contactos</a></li>
+            </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
             <a href="#"><img src="img/logo-light.svg"></a>
@@ -88,7 +88,7 @@
         </div>
         <div class="col-lg-8 col-md-8 col-sm-12">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet magna placerat, interdum ante et, sodales justo. Donec mollis non arcu eu vulputate. Aliquam erat volutpat.</p>
-          <p><strong>Curabitur et tortor sollicitudin, porttitor erat eu, consectetur elit.</strong></p>
+          <h2>Curabitur et tortor sollicitudin, porttitor erat eu, consectetur elit.</h2>
           <p>Sed sagittis risus eu pharetra vulputate. Curabitur sodales molestie nunc, id ornare tellus posuere in. Proin at elit massa. Pellentesque et blandit ante. Suspendisse vel ante sit amet dui vestibulum consectetur. Curabitur lacinia ligula at eros semper, et egestas felis egestas. Etiam ac urna nisl. Morbi nec faucibus dui. </p>
           <p><strong>Maecenas dictum varius ante eget varius. </strong></p>
           <p>Phasellus laoreet, urna viverra lacinia sodales, dolor dui ultricies lectus, quis convallis odio ex gravida quam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
@@ -98,9 +98,9 @@
           <div class="social-media"> 
             <span>PARTILHAR</span>
             <div class="white-line"></div>
-            <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
-            <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
-            <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+            <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-grey-logo.svg"></a>
+            <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-grey-logo.svg"></a>
+            <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-grey-logo.svg"></a>
           </div>
         </div>
       </div>
@@ -196,13 +196,13 @@
             </div>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
-            <nav class="footer-nav">
+            <nav class="footer-nav desktop">
               <ul>
-                  <li><a href="#">Insights</a></li>
-                  <li><a href="#">Serviços</a></li>
-                  <li><a href="#">Indústrias</a></li>
-                  <li><a href="#">Sobre</a></li>
-                  <li><a href="#">Contactos</a></li>
+                <li><a href="blog.html">Insights</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="industrias.html">Indústrias</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
               </ul>
             </nav>
           </div>
