--- a/industria-grande-distribuicao-e-consumo.html
+++ b/industria-grande-distribuicao-e-consumo.html
@@ -35,14 +35,14 @@
       <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
-              <ul>
-                  <li><a href="#"><img src="img/logo-light.svg"></a></li>
-                  <li><a href="#">Insights</a></li>
-                  <li><a href="#">Serviços</a></li>
-                  <li><a href="#">Indústrias</a></li>
-                  <li><a href="#">Sobre</a></li>
-                  <li><a class="btn" href="">Contactos</a></li>
-              </ul>
+            <ul>
+              <li><a href="index.html"><img src="img/logo-light.svg"></a></li>
+              <li><a href="blog.html">Insights</a></li>
+              <li><a href="servicos.html">Serviços</a></li>
+              <li><a href="industrias.html">Indústrias</a></li>
+              <li><a href="sobre.html">Sobre</a></li>
+              <li><a class="btn" href="contactos.html">Contactos</a></li>
+            </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
             <a href="#"><img src="img/logo-light.svg"></a>
@@ -64,39 +64,49 @@
     </div>
   </div>
 
-  <section>
+  <section class="industry-post section-1">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <span class="subtitle">GRANDE DISTRIBUIÇÃO & CONSUMO</span>
-          <h2>A nossa experiência no sector da Grande Distribuição & Consumo é diversa. </h2>
+          <div class="padding-right">
+            <span class="subtitle">GRANDE DISTRIBUIÇÃO & CONSUMO</span>
+            <h3>A nossa experiência no sector da Grande Distribuição & Consumo é diversa. </h3>
+          </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="padding-left">
           <p>As várias empresas que requisitam a Buzzbeat apresentaram desafios diferentes. Se uns são estritamente relacionados à Consultoria de Estratégia Global do Negócio ou do Projeto, outros solicitam a construção e gestão de ecossistemas digitais que compreendem uma multidisciplinaridade de contributos da equipa Buzzbeat:</p>
           <p>desde a estratégia orientada para cada canal ou projeto, como a gestão de comunidades das redes sociais ou a produção de conteúdos rich media, passando pelo desenvolvimento e implementação de técnicas SEO ou pelo lançamento de campanhas de Publicidade Online.</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section>
+  <section class="industry-post section-2">
     <div class="larger-wrapper">
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <span class="">DO CONCEITO AO PRODUTO FINAL</span>
-          <h2>De referir que os projectos de Consultoria & Estratégia não se ficam por aí. </h2>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <p>Frequentemente, os clientes envolvem-nos ao longo dos seus projetos, desde o desenho do Conceito Criativo à construção do Caderno de Encargos, até à análise das propostas recebidas dos fornecedores e apoio na respetiva decisão final.</p>
-          <p>A nossa experiência permitem tomar conhecimento detalhado do sector, pois o estudo end-to-end do processo de conceção, comunicação e dinamização dos produtos é fundamental para o sucesso de cada projeto.</p>
-        </div>
+      <div class="row blue-square">
+          <div class="col-lg-12 col-md-12 col-sm-12">
+            <span class="subtitle">DO CONCEITO AO PRODUTO FINAL</span>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="padding-right">
+              <h3>De referir que os projectos<br> de Consultoria & Estratégia não se<br> ficam por aí. </h3>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="padding-left">
+              <p>Frequentemente, os clientes envolvem-nos ao longo dos seus projetos, desde o desenho do Conceito Criativo à construção do Caderno de Encargos, até à análise das propostas recebidas dos fornecedores e apoio na respetiva decisão final.</p>
+              <p>A nossa experiência permitem tomar conhecimento detalhado do sector, pois o estudo end-to-end do processo de conceção, comunicação e dinamização dos produtos é fundamental para o sucesso de cada projeto.</p>
+            </div>
+          </div>
       </div>
     </div>
   </section>
 
-  <section>
+  <section class="industry-post section-3">
     <div class="wrapper">
-      <div class="row">
+      <div class="row align-bottom">
         <div class="col-lg-10 col-md-10">
           <span class="subtitle">INDÚSTRIAS</span>
           <h2>Estamos onde o seu<br> negócio mais precisa</h2>
@@ -201,13 +211,13 @@
             </div>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
-            <nav class="footer-nav">
+            <nav class="footer-nav desktop">
               <ul>
-                  <li><a href="#">Insights</a></li>
-                  <li><a href="#">Serviços</a></li>
-                  <li><a href="#">Indústrias</a></li>
-                  <li><a href="#">Sobre</a></li>
-                  <li><a href="#">Contactos</a></li>
+                <li><a href="blog.html">Insights</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="industrias.html">Indústrias</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
               </ul>
             </nav>
           </div>
