--- a/servicos.html
+++ b/servicos.html
@@ -35,14 +35,14 @@
       <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
-              <ul>
-                  <li><a href="#"><img src="img/logo-light.svg"></a></li>
-                  <li><a href="#">Insights</a></li>
-                  <li><a href="#">Serviços</a></li>
-                  <li><a href="#">Indústrias</a></li>
-                  <li><a href="#">Sobre</a></li>
-                  <li><a class="btn" href="">Contactos</a></li>
-              </ul>
+            <ul>
+              <li><a href="index.html"><img src="img/logo-light.svg"></a></li>
+              <li><a href="blog.html">Insights</a></li>
+              <li><a href="servicos.html">Serviços</a></li>
+              <li><a href="industrias.html">Indústrias</a></li>
+              <li><a href="sobre.html">Sobre</a></li>
+              <li><a class="btn" href="contactos.html">Contactos</a></li>
+            </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
             <a href="#"><img src="img/logo-light.svg"></a>
@@ -57,7 +57,7 @@
       <!-- END Module Navigation-->
   </header>
 
-  <section class="head-section">
+  <section class="services head-section">
     <div class="wrapper">
       <div class="row align-bottom">
         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -71,15 +71,15 @@
     
     <div class="larger-wrapper">
       <div class="row banner-img">
-        <div class="col-lg-11 col-md-11 col-sm-11">
+        <div class="col-lg-11 col-md-11 col-sm-12">
             <img class="img-fluid" src="img/00-servicos-img.jpg">
         </div>
         <div class="col-lg-1 col-md-1"></div>
       </div>
       <div class="row">
-        <div class="col-lg-5 col-md-5">
+        <div class="col-lg-5 col-md-5 col-sm-12">
         </div>
-        <div class="col-lg-7 col-md-7">
+        <div class="col-lg-7 col-md-7 col-sm-12">
           <div class="blue-square">
             <h3>A construção do seu ecossistema requer uma abordagem holística de soluções.</h3>
           </div>
@@ -629,13 +629,13 @@
             </div>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
-            <nav class="footer-nav">
+            <nav class="footer-nav desktop">
               <ul>
-                  <li><a href="#">Insights</a></li>
-                  <li><a href="#">Serviços</a></li>
-                  <li><a href="#">Indústrias</a></li>
-                  <li><a href="#">Sobre</a></li>
-                  <li><a href="#">Contactos</a></li>
+                <li><a href="blog.html">Insights</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="industrias.html">Indústrias</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
               </ul>
             </nav>
           </div>
