--- a/blog.html
+++ b/blog.html
@@ -35,14 +35,14 @@
       <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
-              <ul>
-                  <li><a href="#"><img src="img/logo-light.svg"></a></li>
-                  <li><a href="#">Insights</a></li>
-                  <li><a href="#">Serviços</a></li>
-                  <li><a href="#">Indústrias</a></li>
-                  <li><a href="#">Sobre</a></li>
-                  <li><a class="btn" href="">Contactos</a></li>
-              </ul>
+            <ul>
+              <li><a href="index.html"><img src="img/logo-light.svg"></a></li>
+              <li><a href="blog.html">Insights</a></li>
+              <li><a href="servicos.html">Serviços</a></li>
+              <li><a href="industrias.html">Indústrias</a></li>
+              <li><a href="sobre.html">Sobre</a></li>
+              <li><a class="btn" href="contactos.html">Contactos</a></li>
+            </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
             <a href="#"><img src="img/logo-light.svg"></a>
@@ -228,13 +228,13 @@
             </div>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
-            <nav class="footer-nav">
+            <nav class="footer-nav desktop">
               <ul>
-                  <li><a href="#">Insights</a></li>
-                  <li><a href="#">Serviços</a></li>
-                  <li><a href="#">Indústrias</a></li>
-                  <li><a href="#">Sobre</a></li>
-                  <li><a href="#">Contactos</a></li>
+                <li><a href="blog.html">Insights</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="industrias.html">Indústrias</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
               </ul>
             </nav>
           </div>
