--- a/contactos.html
+++ b/contactos.html
@@ -45,7 +45,7 @@
           </nav>
           <nav class="main-nav-mobile mobile">
             <a href="#"><img src="img/logo-light.svg"></a>
-            <div class="menu" onclick="myFunction(this)">
+            <div class="menu menu-light" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
@@ -90,7 +90,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
           <span class="subtitle">OBJETIVOS & metas</span>
-          <h2>Do local ao global, trabalhamos com pessoas e marcas que ambicionam mais e melhor.</h2>
+          <h3>Do local ao global,<br> trabalhamos com pessoas e<br> marcas que ambicionam mais<br> e melhor.</h3>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12"></div>
       </div>
@@ -106,7 +106,7 @@
             <p>Estamos disponíveis para receber<br> as suas propostas ou esclarecer<br> qualquer questão.</p>
             <p>Diga-nos o motivo do seu<br> contacto.</p>
             <a class="btn" href="">Iniciar um Projeto</a>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saber mais sobre a Buzzbeat</span></a>
+            <a class="contact-btn btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saber mais sobre a Buzzbeat</span></a>
           </div>
           <div class="col-lg-7 col-md-7 col-sm-12 order-first">
             <div class="footer-form">
