--- a/industrias.html
+++ b/industrias.html
@@ -46,7 +46,7 @@
           </nav>
           <nav class="main-nav-mobile mobile">
             <a href="#"><img src="img/logo-light.svg"></a>
-            <div class="menu" onclick="myFunction(this)">
+            <div class="menu menu-light" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
@@ -57,7 +57,7 @@
       <!-- END Module Navigation-->
   </header>
 
-  <section class="head-section">
+  <section class="industry head-section">
     <div class="wrapper">
       <div class="row align-bottom">
         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -71,7 +71,7 @@
     
     <div class="larger-wrapper">
       <div class="row banner-img">
-        <div class="col-lg-11 col-md-11 col-sm-11">
+        <div class="col-lg-11 col-md-11 col-sm-12">
             <img class="img-fluid" src="img/00-servicos-img.jpg">
         </div>
         <div class="col-lg-1 col-md-1"></div>
