--- a/industria-grande-distribuicao-e-consumo.html
+++ b/industria-grande-distribuicao-e-consumo.html
@@ -46,7 +46,7 @@
           </nav>
           <nav class="main-nav-mobile mobile">
             <a href="#"><img src="img/logo-light.svg"></a>
-            <div class="menu" onclick="myFunction(this)">
+            <div class="menu menu-light" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
