--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" type="image/png" href="favicon.png"/>
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -45,7 +45,7 @@
             </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
-            <a href="#"><img src="img/logo-light.svg"></a>
+            <a href="index.html"><img src="img/logo-light.svg"></a>
             <div class="menu menu-light" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -95,7 +95,7 @@
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-right" href="">
+          <a class="padding-right" href="blogpost.html">
             <img class="img-fluid" src="img/01-servicos-img.jpg">
             <div class="article-info">
               <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
@@ -106,7 +106,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-left" href="">
+          <a class="padding-left" href="blogpost.html">
             <img class="img-fluid" src="img/02-servicos-img.jpg">
             <div class="article-info">
               <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
@@ -117,7 +117,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-right" href="">
+          <a class="padding-right" href="blogpost.html">
             <img class="img-fluid" src="img/01-servicos-img.jpg">
             <div class="article-info">
               <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
@@ -128,7 +128,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a class="padding-left" href="">
+          <a class="padding-left" href="blogpost.html">
             <img class="img-fluid" src="img/02-servicos-img.jpg">
             <div class="article-info">
               <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
