--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" type="image/png" href="favicon.png"/>
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -45,7 +45,7 @@
               </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
-            <a href="#"><img src="img/logo-dark.svg"></a>
+            <a href="index.html"><img src="img/logo-dark.svg"></a>
             <div class="menu" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -99,11 +99,7 @@
             -->
           </div>
         </div>
-        <nav class="slider-nav">
-          <a href="#slide-0" class="active">Slide 0</a> 
-          <a href="#slide-1">Slide 1</a> 
-          <a href="#slide-2">Slide 2</a> 
-        </nav>
+       
     </div>
     <div class="scroll-guide desktop">
       <div class="scroll-down">
@@ -120,6 +116,11 @@
 
         </div>
         <div class="col-lg-5 col-md-5 col-sm-12">
+          <nav class="slider-nav">
+            <a href="#slide-0" class="active"></a> 
+            <a href="#slide-1"></a> 
+            <a href="#slide-2"></a> 
+          </nav>
           <div class="project-cta">
             <span>Tem um projeto para iniciar?<br>
             <strong>Vamos conversar.</strong></span>
