--- a/industrias.html
+++ b/industrias.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" type="image/png" href="favicon.png"/>
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -45,7 +45,7 @@
             </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
-            <a href="#"><img src="img/logo-light.svg"></a>
+            <a href="index.html"><img src="img/logo-light.svg"></a>
             <div class="menu menu-light" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
