--- a/sobre.html
+++ b/sobre.html
@@ -45,7 +45,7 @@
             </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
-            <a href="#"><img src="img/logo-light.svg"></a>
+            <a href="index.html"><img src="img/logo-light.svg"></a>
             <div class="menu menu-light" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
