--- a/contactos.html
+++ b/contactos.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Buzzbeat Strategy Studio | Digital Marketing & business Modeling</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -31,7 +31,7 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width nav-bar light-nav">
+      <div class="full-width light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
             <ul>
