--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Buzzbeat Strategy Studio | Digital Marketing & business Modeling</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,7 +32,7 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width nav-bar sticky-bar transparent-nav">
+      <div class="full-width nav-bar absolute-bar transparent-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
               <ul>
