--- a/industrias.html
+++ b/industrias.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Buzzbeat Strategy Studio | Digital Marketing & business Modeling</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,7 +32,7 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width nav-bar light-nav">
+      <div class="full-width light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
             <ul>
@@ -352,24 +352,30 @@
               <div class="owl-carousel owl-theme right-slider">
                 <div class="item">
                   <a href="">
-                    <img src="img/01-carousel-img.jpg">
-                    <span class="service-title">Consultoria & Estratégia</span>
-                    <p>Desenvolvemos planos para atingir os seus objetivos mais cedo.</p>
+                    <div class="img-label-container">
+                      <img src="img/01-carousel-img.jpg">
+                      <span class="service-title">Consultoria & Estratégia</span>     
+                    </div>               
                   </a>
+                  <p>Desenvolvemos planos para atingir os seus objetivos mais cedo.</p>
                 </div>
                 <div class="item">
                   <a href="">
-                    <img src="img/02-carousel-img.jpg">
-                    <span class="service-title">Transformação Digital</span>
-                    <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
+                    <div class="img-label-container">
+                      <img src="img/02-carousel-img.jpg">
+                      <span class="service-title">Transformação Digital</span>
+                    </div>
                   </a>
+                  <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
                 </div>
                 <div class="item">
                   <a href="">
-                    <img src="img/03-carousel-img.jpg">
-                    <span class="service-title">Consumer Insight</span>
-                    <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
+                    <div class="img-label-container">
+                      <img src="img/03-carousel-img.jpg">
+                      <span class="service-title">Consumer Insight</span>
+                    </div>
                   </a>
+                  <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
                 </div>
               </div>
           </div>
