--- a/servicos.html
+++ b/servicos.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Buzzbeat Strategy Studio | Digital Marketing & business Modeling</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,7 +32,7 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width nav-bar light-nav">
+      <div class="full-width light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
             <ul>
@@ -164,6 +164,7 @@
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12 go-right">
           <div class="img-label padding-left">
+            <div class="blue-label"><span>Transformação<br> Digital</span></div>
             <img class="img-fluid" src="img/02-servicos-img.jpg">
           </div>
         </div>
@@ -216,6 +217,7 @@
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12">
           <div class="img-label padding-right">
+            <div class="blue-label"><span>Consumer<br> Insight</span></div>
             <img class="img-fluid" src="img/03-servicos-img.jpg">
           </div>
         </div>
@@ -268,6 +270,7 @@
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12 go-right">
           <div class="img-label padding-left">
+            <div class="blue-label"><span>Inovação<br> em Tecnologia</span></div>
             <img class="img-fluid" src="img/04-servicos-img.jpg">
           </div>
         </div>
@@ -320,6 +323,7 @@
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12">
           <div class="img-label padding-right">
+           <div class="blue-label"><span>Criatividade</span></div>
            <img class="img-fluid" src="img/05-servicos-img.jpg">
           </div>
         </div>
@@ -371,7 +375,8 @@
     <div class="wrapper">
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12 go-right">
-          <div class="img-label padding-left"> 
+          <div class="img-label padding-left">
+            <div class="blue-label"><span>Marketing</span></div>
             <img class="img-fluid" src="img/06-servicos-img.jpg">
           </div>
         </div>
@@ -424,6 +429,7 @@
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12">
           <div class="img-label padding-right">
+            <div class="blue-label"><span>Formação</span></div>
             <img class="img-fluid" src="img/06-servicos-img.jpg">
           </div>
         </div>
@@ -476,6 +482,7 @@
       <div class="row align-center">
         <div class="col-lg-7 col-md-7 col-sm-12 go-right">
           <div class="img-label padding-left">
+            <div class="blue-label"><span>E-commerce<br> Performance</span></div>
             <img class="img-fluid" src="img/06-servicos-img.jpg">
           </div>
         </div>
@@ -540,25 +547,25 @@
           <div class="carousel-wrapper spacer">
               <div class="owl-carousel owl-theme right-slider">
                 <div class="item">
-                  <a href="">
+                  <a href="industria-grande-distribuicao-e-consumo.html">
                     <img src="img/01-industries-img.jpg">
                     <span class="service-title">Grande Distribuição & Consumo</span>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="">
+                  <a href="industria-grande-distribuicao-e-consumo.html">
                     <img src="img/02-industries-img.jpg">
                     <span class="service-title">Automóvel</span>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="">
+                  <a href="industria-grande-distribuicao-e-consumo.html">
                     <img src="img/03-industries-img.jpg">
                     <span class="service-title">Saúde</span>
                   </a>
                 </div>
                 <div class="item">
-                  <a href="">
+                  <a href="industria-grande-distribuicao-e-consumo.html">
                     <img src="img/04-industries-img.jpg">
                     <span class="service-title">Retalho</span>
                   </a>
