--- a/index.html
+++ b/index.html
@@ -45,13 +45,36 @@
               </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
-            <a href="index.html"><img src="img/logo-dark.svg"></a>
+            <a href="index.html"><img src="img/logo-light.svg"></a>
             <div class="menu" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
             </div>
           </nav>
+          <div class="nav-mobile">
+            <ul>
+              <li><a href="blog.html">insights</a></li>
+              <li><a href="servicos.html">Serviços</a></li>
+              <li><a href="industrias.html">indústrias</a></li>
+              <li><a href="sobre.html">Sobre</a></li>
+              <div class="nav-mobile-contact">
+              <span class="subtitle">Tem um projeto para iniciar?</span>
+              </div>
+              <li><a href="contactos.html">Contactos</a></li>
+            </ul>
+            <div class="social">
+              <div class="social-media"> 
+                <span>SOMOS BUZZBEAT</span>
+                <div class="white-line"></div>
+              </div>
+              <div class="social-links">
+                <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
+                <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
+                <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- END Module Navigation-->
