--- a/index.html
+++ b/index.html
@@ -102,12 +102,16 @@
                     <div class="col-lg-5"></div>
                   </div>
                   <div class="col-lg-6 desktop">
-                    <div class="social-media"> 
-                      <span>SOMOS BUZZBEAT</span>
-                      <div class="white-line"></div>
-                      <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
-                      <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
-                      <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+                    <div class="social">
+                      <div class="social-media"> 
+                        <span>SOMOS BUZZBEAT</span>
+                        <div class="white-line"></div>
+                      </div>
+                      <div class="social-links">
+                        <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
+                        <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
+                        <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+                      </div>
                     </div>
                   </div>
                   <div class="col-lg-6 desktop">
@@ -405,12 +409,16 @@
       <div class="wrapper">
         <div class="row">
           <div class="col-lg-7 col-md-7 col-sm-12 align-center">
-            <div class="social-media"> 
-              <span>SOMOS BUZZBEAT</span>
-              <div class="white-line"></div>
-              <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
-              <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
-              <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+            <div class="social">
+              <div class="social-media"> 
+                <span>SOMOS BUZZBEAT</span>
+                <div class="white-line"></div>
+              </div>
+              <div class="social-links">
+                <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
+                <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
+                <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+              </div>
             </div>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
