--- a/industria-grande-distribuicao-e-consumo.html
+++ b/industria-grande-distribuicao-e-consumo.html
@@ -52,6 +52,29 @@
               <div class="bar3"></div>
             </div>
           </nav>
+          <div class="nav-mobile">
+            <ul>
+              <li><a href="blog.html">insights</a></li>
+              <li><a href="servicos.html">Serviços</a></li>
+              <li><a href="industrias.html">indústrias</a></li>
+              <li><a href="sobre.html">Sobre</a></li>
+              <div class="nav-mobile-contact">
+              <span class="subtitle">Tem um projeto para iniciar?</span>
+              </div>
+              <li><a href="contactos.html">Contactos</a></li>
+            </ul>
+            <div class="social">
+              <div class="social-media"> 
+                <span>SOMOS BUZZBEAT</span>
+                <div class="white-line"></div>
+              </div>
+              <div class="social-links">
+                <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
+                <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
+                <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- END Module Navigation-->
@@ -202,22 +225,26 @@
       <div class="wrapper">
         <div class="row">
           <div class="col-lg-7 col-md-7 col-sm-12 align-center">
-            <div class="social-media"> 
-              <span>SOMOS BUZZBEAT</span>
-              <div class="white-line"></div>
-              <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
-              <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
-              <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+            <div class="social">
+              <div class="social-media"> 
+                <span>SOMOS BUZZBEAT</span>
+                <div class="white-line"></div>
+              </div>
+              <div class="social-links">
+                <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
+                <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
+                <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+              </div>
             </div>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <nav class="footer-nav desktop">
               <ul>
-                <li><a href="blog.html">Insights</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="industrias.html">Indústrias</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="contactos.html">Contactos</a></li>
+                  <li><a href="blog.html">Insights</a></li>
+                  <li><a href="servicos.html">Serviços</a></li>
+                  <li><a href="industrias.html">Indústrias</a></li>
+                  <li><a href="sobre.html">Sobre</a></li>
+                  <li><a href="contactos.html">Contactos</a></li>
               </ul>
             </nav>
           </div>
