--- a/contactos.html
+++ b/contactos.html
@@ -90,7 +90,7 @@
             <p>Edifício Núcleo Central 100,<br>
               Salas 342, 344, 346<br>
               2740-122 Porto Salvo, Portugal</p>
-            <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Obter direções</span></a>
+            <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Obter direções</span></a>
           </div>
         </div>
         <div class="col-lg-7 col-md-7 col-sm-12">
@@ -129,7 +129,7 @@
             <p>Estamos disponíveis para receber<br> as suas propostas ou esclarecer<br> qualquer questão.</p>
             <p>Diga-nos o motivo do seu<br> contacto.</p>
             <a class="btn" href="">Iniciar um Projeto</a>
-            <a class="contact-btn btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saber mais sobre a Buzzbeat</span></a>
+            <a class="contact-btn btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Saber mais sobre a Buzzbeat</span></a>
           </div>
           <div class="col-lg-7 col-md-7 col-sm-12 order-first">
             <div class="footer-form">
@@ -139,7 +139,7 @@
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
                 <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
-                <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
+                <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
               </form>
             </div>
           </div>
@@ -161,7 +161,7 @@
           <div class="col-lg-5 col-md-5 col-sm-12 newsletter">
             <form>
               <input type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
-              <a href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
+              <a href=""><div class="btn-send"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
             </form>
           </div>
         </div>
