--- a/blog.html
+++ b/blog.html
@@ -107,7 +107,7 @@
             <span class="subtitle">ARTIGO 01 SET 2020</span><br>
             <h3 class="article-title">INOBUZZ: Otimização de recursos em contexto digital</h3>
             <span class="article-short">Marque presença na Live através do Facebook ou do Youtube, no próximo dia 7 de Outubro, pelas 18H.</span><br>
-            <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
         </div>
       </div>
@@ -166,7 +166,7 @@
   </section>
   
   <div class="btn-container">
-  <a class="btn-blue-ball btn-light" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-down.svg"></div><span>Ver Mais</span></a>
+  <a class="btn-blue-ball btn-light" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-down.svg"></div><span>Ver Mais</span></a>
   </div>
 
   <section class="blog section-3">
@@ -183,7 +183,7 @@
             <span class="subtitle">SOMOS BUZZBEAT</span>
             <h2>Somos uma equipa<br> de especialistas<br> ao seu dispor</h2>
             <p>Trabalhamos lado a lado para que os seus projetos alcancem o máximo potencial</p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
+            <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
           </div>
         </div>
       </div>
@@ -210,7 +210,7 @@
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
                 <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
-                <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
+                <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
               </form>
             </div>
           </div>
@@ -232,7 +232,7 @@
           <div class="col-lg-5 col-md-5 col-sm-12 newsletter">
             <form>
               <input type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
-              <a href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
+              <a href=""><div class="btn-send"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
             </form>
           </div>
         </div>
