--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="col-lg-5 col-md-5 col-sm-12">
                       <span class="subtitle">AGÊNCIA DE ESTRATÉGIA DIGITAL</span>
                       <h1>A evolução do seu<br> negócio começa<br> aqui e agora</h1>
-                      <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
+                      <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
                     </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-5"></div>
@@ -167,7 +167,7 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
           <p>Desenhamos a transformação do seu negócio com estratégia, tecnologia e criatividade, para que se possa focar nos seus clientes.</p>
-          <a class="btn-blue-ball btn-light" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Todos os Serviços</span></a>
+          <a class="btn-blue-ball btn-light" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Serviços</span></a>
         </div>
       </div>
     </div>
@@ -227,7 +227,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12">
           <span class="subtitle">INDÚSTRIAS</span>
           <h2>Trabalhamos projetos &<br> indústrias nos mais<br> variados setores</h2>
-          <a class="btn-blue-ball btn-light" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
+          <a class="btn-blue-ball btn-light" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12"></div>
       </div>
@@ -276,12 +276,12 @@
   <section class="homepage section-3">
     <div class="wrapper">
       <div class="row">
-        <div class="col-lg-10 col-md-10">
+        <div class="col-lg-9 col-md-9">
           <span class="subtitle">INSIGHTS</span>
           <h2>Estamos sempre<br> a aprender, e<br> escrevemos sobre isso.</h2>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-12">
-          <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Todos os Insights</span></a>
+        <div class="col-lg-3 col-md-3 col-sm-12">
+          <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
         </div>
       </div>
     </div>
@@ -301,7 +301,7 @@
             <span class="subtitle">ARTIGO 01 SET 2020</span><br>
             <h3 class="article-title">INOBUZZ: Otimização de recursos em contexto digital</h3>
             <span class="article-short">Marque presença na Live através do Facebook ou do Youtube, no próximo dia 7 de Outubro, pelas 18H.</span><br>
-            <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
         </div>
       </div>
@@ -350,7 +350,7 @@
             <span class="subtitle">SOMOS BUZZBEAT</span>
             <h2>Somos uma equipa<br> de especialistas<br> ao seu dispor</h2>
             <p>Trabalhamos lado a lado para que os seus projetos alcancem o máximo potencial</p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
+            <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
           </div>
         </div>
       </div>
@@ -377,7 +377,7 @@
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
                 <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
-                <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
+                <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
               </form>
             </div>
           </div>
@@ -399,7 +399,7 @@
           <div class="col-lg-5 col-md-5 col-sm-12 newsletter">
             <form>
               <input type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
-              <a href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
+              <a href=""><div class="btn-send"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
             </form>
           </div>
         </div>
