--- a/industria-grande-distribuicao-e-consumo.html
+++ b/industria-grande-distribuicao-e-consumo.html
@@ -130,12 +130,12 @@
   <section class="industry-post section-3">
     <div class="wrapper">
       <div class="row align-bottom">
-        <div class="col-lg-10 col-md-10">
+        <div class="col-lg-9 col-md-9 col-sm-12">
           <span class="subtitle">INDÚSTRIAS</span>
           <h2>Estamos onde o seu<br> negócio mais precisa</h2>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-12">
-          <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
+        <div class="col-lg-3 col-md-3 col-sm-12">
+          <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
         </div>
       </div>
       <div class="row">
@@ -193,7 +193,7 @@
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
                 <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
-                <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
+                <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
               </form>
             </div>
           </div>
@@ -215,7 +215,7 @@
           <div class="col-lg-5 col-md-5 col-sm-12 newsletter">
             <form>
               <input type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
-              <a href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
+              <a href=""><div class="btn-send"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
             </form>
           </div>
         </div>
