--- a/industrias.html
+++ b/industrias.html
@@ -148,7 +148,7 @@
               <div class="col-lg-6 col-md-6 col-sm-12">
                 <p><strong>A nossa experiência no sector da Grande Distribuição & Consumo é diversa.</strong></p>
                 <p>Somos abordados por desafios nas mais variantes áreas, e trabalhamos para responder ao objetivo do seu projeto.</p>
-                <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
+                <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
               </div>
               <div class="col-lg-5 col-md-5 col-sm-12"></div>
             </div>
@@ -166,7 +166,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12">
             <p><strong></strong></p>
             <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <img src="">
@@ -183,7 +183,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12">
             <p><strong></strong></p>
             <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <img src="">
@@ -200,7 +200,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12">
             <p><strong></strong></p>
             <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <img src="">
@@ -217,7 +217,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12">
             <p><strong></strong></p>
             <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <img src="">
@@ -234,7 +234,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12">
             <p><strong></strong></p>
             <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <img src="">
@@ -251,7 +251,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12">
             <p><strong></strong></p>
             <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <img src="">
@@ -268,7 +268,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12">
             <p><strong></strong></p>
             <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <img src="">
@@ -285,7 +285,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12">
             <p><strong></strong></p>
             <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <img src="">
@@ -302,7 +302,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12">
             <p><strong></strong></p>
             <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <img src="">
@@ -319,7 +319,7 @@
           <div class="col-lg-8 col-md-8 col-sm-12">
             <p><strong></strong></p>
             <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12">
             <img src="">
@@ -330,7 +330,7 @@
 
     <button class="accordion">
       <h3 class="blue-txt">A sua Indústria</h3>
-      <div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div>
+      <div class="btn-go"><img src="img/arrow-right.svg"></div>
     </button>
     <div class="panel always-open">
       <div class="row">
@@ -346,7 +346,7 @@
             <div class="col-lg-6 col-md-6 col-sm-12">
               <h3>Não encontra o seu setor? Desafie-nos</h3>
               <p>Fale connosco e veja o que podemos fazer pelo seu negócio</p>
-              <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
+              <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href=""><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12"></div>
           </div>
@@ -360,12 +360,12 @@
   <section class="industry section-3">
     <div class="wrapper">
       <div class="row align-bottom">
-        <div class="col-lg-10 col-md-10">
+        <div class="col-lg-9 col-md-9 col-sm-12">
           <span class="subtitle">SERVIÇOS</span>
           <h2>Adicionamos valor<br> ao seu futuro</h2>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-12">
-          <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
+        <div class="col-lg-3 col-md-3 col-sm-12">
+          <a class="btn-blue-ball btn-dark" href=""><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
         </div>
       </div>
       <div class="row">
@@ -426,7 +426,7 @@
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
                 <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
-                <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
+                <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
               </form>
             </div>
           </div>
@@ -448,7 +448,7 @@
           <div class="col-lg-5 col-md-5 col-sm-12 newsletter">
             <form>
               <input type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
-              <a href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
+              <a href=""><div class="btn-send"><img src="img/arrow-right-blue.svg"></div><span></a>
             </form>
           </div>
         </div>
