--- a/sobre.html
+++ b/sobre.html
@@ -192,42 +192,48 @@
   <section class="about section-3">
     <div class="wrapper">
       <div class="row align-bottom">
-        <div class="col-lg-10 col-md-10">
+        <div class="col-lg-9 col-md-9 col-sm-12">
           <span class="subtitle">SERVIÇOS</span>
           <h2>Adicionamos valor<br> ao seu futuro</h2>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-12">
-          <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
+        <div class="col-lg-3 col-md-3 col-sm-12">
+          <a class="btn-blue-ball btn-dark" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-2 col-md-2"></div>
         <div class="col-lg-10 col-md-10 col-sm-12 desktop">
           <div class="carousel-wrapper spacer">
-              <div class="owl-carousel owl-theme right-slider">
-                <div class="item">
-                  <a href="">
+            <div class="owl-carousel owl-theme right-slider">
+              <div class="item">
+                <a href="">
+                  <div class="img-label-container">
                     <img src="img/01-carousel-img.jpg">
-                    <span class="service-title">Consultoria & Estratégia</span>
-                    <p>Desenvolvemos planos para atingir os seus objetivos mais cedo.</p>
-                  </a>
-                </div>
-                <div class="item">
-                  <a href="">
+                    <span class="service-title">Consultoria & Estratégia</span>     
+                  </div>               
+                </a>
+                <p>Desenvolvemos planos para atingir os seus objetivos mais cedo.</p>
+              </div>
+              <div class="item">
+                <a href="">
+                  <div class="img-label-container">
                     <img src="img/02-carousel-img.jpg">
                     <span class="service-title">Transformação Digital</span>
-                    <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
-                  </a>
-                </div>
-                <div class="item">
-                  <a href="">
+                  </div>
+                </a>
+                <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
+              </div>
+              <div class="item">
+                <a href="">
+                  <div class="img-label-container">
                     <img src="img/03-carousel-img.jpg">
                     <span class="service-title">Consumer Insight</span>
-                    <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
-                  </a>
-                </div>
+                  </div>
+                </a>
+                <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
               </div>
-          </div>
+            </div>
+        </div>
         </div>
       </div>
     </div>
@@ -252,7 +258,7 @@
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
                 <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
-                <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
+                <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
               </form>
             </div>
           </div>
@@ -274,7 +280,7 @@
           <div class="col-lg-5 col-md-5 col-sm-12 newsletter">
             <form>
               <input type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
-              <a href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
+              <a href=""><div class="btn-send"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
             </form>
           </div>
         </div>
